[package]
name = "git-starter-rust"
version = "0.1.4"
authors = ["Petro Bondar <mail>"]
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.13"
predicates = "3.0.2"

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking"] } # http requests
bytes = "1.3.0"                                                    # helps wrap responses from reqwest
tokio = { version = "1.23.0", features = ["full"] }                # async http requests
clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
flate2 = "1.0"                                                     # gzip compression
sha1 = "0.10.1"                                                    # hashing
hex = "0.4.3"                                                      # working with hash output
anyhow = "1.0.59"                                                  # error handling
thiserror = "1.0.32"                                               # error handling
